--- a/.env.example
+++ b/.env.example
@@ -160,17 +160,18 @@ POLYGON_ZKEVM_RPC_URL=https://rpc.cardona.zkevm-rpc.com
 POLYGON_ZKEVM_AMOUNT=0.0001
 
 # ==============================================================================
-# Aptos Configuration (Devnet)
+# Aptos Configuration (Testnet)
 # ==============================================================================
 # Aptos is a Move-based blockchain with sub-second finality
-# Get devnet APT from faucet: https://faucet.devnet.aptoslabs.com/
+# Get testnet APT from faucet: https://faucet.testnet.aptoslabs.com/
+# Or use Petra wallet: https://petra.app/
 #
 # Generate keypair:
-#   aptos init --network devnet
+#   aptos init --network testnet
 # Private key format: hex string (64 characters, no 0x prefix)
 
-APTOS_NETWORK=devnet
-# APTOS_RPC_URL=https://fullnode.devnet.aptoslabs.com/v1 (optional, defaults to network)
+APTOS_NETWORK=testnet
+# APTOS_RPC_URL=https://fullnode.testnet.aptoslabs.com/v1 (optional, defaults to network)
 APTOS_PRIVATE_KEY=YourHexPrivateKeyHere
 APTOS_TO_ADDRESS=0xRecipientAddressHere
 APTOS_AMOUNT=0.01
